--- a/Work-Record/2025年4月.md
+++ b/Work-Record/2025年4月.md
@@ -1,10 +1,11 @@
 # 2025.4.13
-（示例）
 
-dmz:
+dmz:今天很困，没做太多事情，晚上补了一会儿
 
-1.学习了黑马java基础，更新了Study-Notes/java基础/java基础学习笔记.md
+1.做了一会毕设，但基本没进展
 
-2.力扣做leetcode1，添加Leetcode-Recording/代码随想录题单/leetcode1.两数之和
+2.正式开始学习java，起了个头，更新Computer_network/java_basic/java基础学习笔记.md
 
-3.学习markdown语法，添加Study-Notes/Markdown/Typora-markdown笔记.md
+3.力扣复习leetcode121、leetcode45、leetcode55，做新题leetcode165，添加Hot100做题笔记leetcode121和leetcode55，添加Others做题笔记leetcode165
+
+
