--- a/Work-Record/2025年4月.md
+++ b/Work-Record/2025年4月.md
@@ -8,4 +8,10 @@ dmz:今天很困，没做太多事情，晚上补了一会儿
 
 3.力扣复习leetcode121、leetcode45、leetcode55，做新题leetcode165，添加Hot100做题笔记leetcode121和leetcode55，添加Others做题笔记leetcode165
 
+# 2025.4.14
 
+dmz：今天又摆烂了一天
+
+1.做毕设
+
+2.力扣复习leetcode763，添加Hot100做题笔记leetcode45
