--- a/Work-Record/2025年4月.md
+++ b/Work-Record/2025年4月.md
@@ -18,4 +18,8 @@ dmz：今天又摆烂了一天
 
 # 2025.4.15
 
-dmz：毕设肝到3点合影留念...
+dmz：昨晚毕设肝到3点...
+
+1.做毕设
+
+2.力扣复习leetcode70，118,198,279；做新题leetcode166,167,172；添加Hot100做题笔记leetcode70,118,198,279；添加Others做题笔记leetcode166，172
