--- a/Work-Record/2025年4月.md
+++ b/Work-Record/2025年4月.md
@@ -1,6 +1,6 @@
 # 2025.4.13
 
-dmz:今天很困，没做太多事情，晚上补了一会儿
+cs-risker:今天很困，没做太多事情，晚上补了一会儿
 
 1.做了一会毕设，但基本没进展
 
@@ -10,7 +10,7 @@ dmz:今天很困，没做太多事情，晚上补了一会儿
 
 # 2025.4.14
 
-dmz：今天又摆烂了一天
+cs-risker：今天又摆烂了一天
 
 1.做毕设
 
@@ -18,8 +18,14 @@ dmz：今天又摆烂了一天
 
 # 2025.4.15
 
-dmz：昨晚毕设肝到3点...
+cs-risker：昨晚毕设肝到3点...
 
 1.做毕设
 
 2.力扣复习leetcode70，118,198,279；做新题leetcode166,167,172；添加Hot100做题笔记leetcode70,118,198,279；添加Others做题笔记leetcode166，172
+
+# 2025.4.16
+
+cs-risker:
+
+1.力扣复习leetcode322，139,300,152,416并添加至Hot100做题笔记
