--- a/Work-Record/2025年4月.md
+++ b/Work-Record/2025年4月.md
@@ -29,3 +29,15 @@ cs-risker：昨晚毕设肝到3点...
 cs-risker:
 
 1.力扣复习leetcode322，139,300,152,416并添加至Hot100做题笔记
+
+# 2025.4.17--2025.4.20
+
+cs-risker:摆烂出去玩了四天......
+
+# 2025.4.21
+
+cs-risker:全心全意肝毕业论文，争取五一回家
+
+1.写毕设初稿，摘要部分，中英文共两页，正文三页（研究背景的1.1.1和1.1.2）以及原创图四个
+
+2.写新题leetcode179并添加至Others做题笔记
