--- a/Work-Record/2025年4月.md
+++ b/Work-Record/2025年4月.md
@@ -41,3 +41,11 @@ cs-risker:全心全意肝毕业论文，争取五一回家
 1.写毕设初稿，摘要部分，中英文共两页，正文三页（研究背景的1.1.1和1.1.2）以及原创图四个
 
 2.写新题leetcode179并添加至Others做题笔记
+
+# 2025.4.22
+
+cs-risker:
+
+1.复习leetcode32，并添加至Hot100做题笔记；做新题leetcode187,201,204，其中204添加至Others做题笔记
+
+2.写毕设初稿，正文三页，完成1.1研究背景和1.2国内外研究现状，原创图一个，参考文献更新至序号35
