--- a/Work-Record/2025年4月.md
+++ b/Work-Record/2025年4月.md
@@ -49,3 +49,11 @@ cs-risker:
 1.复习leetcode32，并添加至Hot100做题笔记；做新题leetcode187,201,204，其中204添加至Others做题笔记
 
 2.写毕设初稿，正文三页，完成1.1研究背景和1.2国内外研究现状，原创图一个，参考文献更新至序号35
+
+# 2025.4.23
+
+cs-risker:
+
+1.复习leetcode62，64，并添加至Hot100做题笔记；做新题leetcode210,211,213，其中211和213添加至Others做题笔记
+
+2.写毕设初稿，正文两页半，完成2.1.1，制作原创图三个
