--- a/Work-Record/2025年4月.md
+++ b/Work-Record/2025年4月.md
@@ -57,3 +57,11 @@ cs-risker:
 1.复习leetcode62，64，并添加至Hot100做题笔记；做新题leetcode210,211,213，其中211和213添加至Others做题笔记
 
 2.写毕设初稿，正文两页半，完成2.1.1，制作原创图三个
+
+# 2025.4.24
+
+cs-risker：
+
+1.复习leetcode5,1143，并添加至Hot100做题笔记；做新题leetcode221,223,227，其中221添加至Others做题笔记
+
+2.写毕设初稿，正文三页半，完成2.1.2和2.2.1，制作原创图四个
