--- a/Work-Record/2025年4月.md
+++ b/Work-Record/2025年4月.md
@@ -65,3 +65,11 @@ cs-risker：
 1.复习leetcode5,1143，并添加至Hot100做题笔记；做新题leetcode221,223,227，其中221添加至Others做题笔记
 
 2.写毕设初稿，正文三页半，完成2.1.2和2.2.1，制作原创图四个
+
+# 2025.4.25
+
+cs-risker:
+
+1.复习leetcode72,136，并添加至Hot100做题笔记；做新题leetcode229,237,241，其中237和241添加至Others做题笔记
+
+2.写毕设初稿，正文两页，完成2.2.2和2.2.3，制作原创图一个
