--- a/Work-Record/2025年4月.md
+++ b/Work-Record/2025年4月.md
@@ -73,3 +73,11 @@ cs-risker:
 1.复习leetcode72,136，并添加至Hot100做题笔记；做新题leetcode229,237,241，其中237和241添加至Others做题笔记
 
 2.写毕设初稿，正文两页，完成2.2.2和2.2.3，制作原创图一个
+
+# 2025.4.26
+
+cs-risker:今天爆肝一下午+晚上论文，离截止日期还有4天......
+
+1.复习leetcode169,75，并添加至Hot100做题笔记；做新题leetcode260,12,264，其中264添加至Others做题笔记
+
+2.写毕设初稿，正文六页，完成2.3.1、2.3.2、2.4、3.1、3.2、3.3，制作原创图五个
