--- a/Work-Record/2025年4月.md
+++ b/Work-Record/2025年4月.md
@@ -81,3 +81,11 @@ cs-risker:今天爆肝一下午+晚上论文，离截止日期还有4天......
 1.复习leetcode169,75，并添加至Hot100做题笔记；做新题leetcode260,12,264，其中264添加至Others做题笔记
 
 2.写毕设初稿，正文六页，完成2.3.1、2.3.2、2.4、3.1、3.2、3.3，制作原创图五个
+
+# 2025.4.27
+
+cs-risker：
+
+1.复习leetcode31，并添加至Hot100做题笔记；做新题leetcode3531,3532,97，其中3532添加至Others做题笔记
+
+2.写毕设初稿，正文三页，完成4.1
