--- a/Work-Record/2025年4月.md
+++ b/Work-Record/2025年4月.md
@@ -89,3 +89,10 @@ cs-risker：
 1.复习leetcode31，并添加至Hot100做题笔记；做新题leetcode3531,3532,97，其中3532添加至Others做题笔记
 
 2.写毕设初稿，正文三页，完成4.1
+
+# 2025.4.28
+
+cs-risker：今天回家了，没时间刷力扣......，论文被催进度了，这两天得写完
+
+1.写毕设初稿，完成4.2.1，4.2.2,4.2.3
+
