--- a/Work-Record/dmz/2025年5月.md
+++ b/Work-Record/dmz/2025年5月.md
@@ -2,7 +2,14 @@
 
 1.做新题：leetcode289,299,304
 
-2.背八股：操作系统
+2.背八股（javaGuide）：操作系统
 > 什么是操作系统？
 > 
 > 操作系统的功能有哪些？
+
+# 2025.5.2
+
+1.做新题：leetcode306,307,310，其中310添加至Others做题笔记
+
+2.背八股（javaGuide）：操作系统
+> 用户态和内核态的区别是？
