--- a/Work-Record/dmz/2025年5月.md
+++ b/Work-Record/dmz/2025年5月.md
@@ -1,4 +1,5 @@
 # 2025.5.1
+cs-risker：
 
 1.做新题：leetcode289,299,304
 
@@ -8,8 +9,17 @@
 > 操作系统的功能有哪些？
 
 # 2025.5.2
+cs-risker：
 
 1.做新题：leetcode306,307,310，其中310添加至Others做题笔记
 
 2.背八股（javaGuide）：操作系统
 > 用户态和内核态的区别是？
+
+# 2025.5.3
+cs-risker：摆烂的一天
+
+1.做新题：leetcode318
+
+2.背八股（javaGuide）：操作系统
+> 为什么必须要有内核态？
