--- a/Work-Record/dmz/2025年5月.md
+++ b/Work-Record/dmz/2025年5月.md
@@ -33,3 +33,19 @@ cs-risker：在家摆烂的一天
 cs-risker: 返校，晚上补力扣...
 
 1.做新题：leetcode331,334,337
+
+# 2025.5.6
+cs-risker：从今天开始，如果跑步也记录上来
+
+1.做新题：leetcode341,357,365，其中341和365添加至Others做题笔记；复习：leetcode27，添加至Carl's_list做题笔记
+
+2.背八股（小林coding）：计算机网络
+> 为什么要有TCP/IP网络模型？
+>
+> 简述TCP/IP网络模型的应用层？
+>
+> 简述TCP/IP网络模型的传输层？当传输层的数据报大小超过MSS怎么办？什么是端口？
+
+3.修改毕业论文
+
+4.跑步：2km
