--- a/Work-Record/dmz/2025年5月.md
+++ b/Work-Record/dmz/2025年5月.md
@@ -49,3 +49,19 @@ cs-risker：从今天开始，如果跑步也记录上来
 3.修改毕业论文
 
 4.跑步：2km
+
+# 2025.5.7
+cs-risker：这两天肚子很疼。。。没啥胃口
+
+1.做新题：leetcode371,372,378；复习leetcode209，添加至Carl's_list做题笔记
+
+2.背八股（小林coding）：计算机网络
+> 简述TCP/IP网络模型的网络层？
+>
+> 什么是IP地址？什么是子网掩码？如何通过IP地址求出子网号和主机号？
+>
+> IP协议中寻址和路由的作用分别是？
+
+3.修改毕业论文
+
+4.跑步：5km
