--- a/Work-Record/dmz/2025年5月.md
+++ b/Work-Record/dmz/2025年5月.md
@@ -65,3 +65,8 @@ cs-risker：这两天肚子很疼。。。没啥胃口
 3.修改毕业论文
 
 4.跑步：5km
+
+# 2025.5.8
+cs-risker：吃胃药，肚子好点了，但还没胃口，没心情做太多事情，烦死了。
+
+1.做新题：leetcode380,382,384；复习leetcode59，添加至Carl's_list做题笔记
