--- a/Work-Record/dmz/2025年5月.md
+++ b/Work-Record/dmz/2025年5月.md
@@ -70,3 +70,21 @@ cs-risker：这两天肚子很疼。。。没啥胃口
 cs-risker：吃胃药，肚子好点了，但还没胃口，没心情做太多事情，烦死了。
 
 1.做新题：leetcode380,382,384；复习leetcode59，添加至Carl's_list做题笔记
+
+# 2025.5.9
+cs-risker：
+
+1.做新题：leetcode385,386，其中385记录在Others题解，复习leetcode203，添加至Carl's_list做题笔记
+
+2.复习黑马java基础，誊写笔记至github
+
+2.背八股（小林coding）：计算机网络
+> 什么是以太网？
+>
+> 什么协议可以获取MAC地址？
+>
+> 简述TCP/IP网络模型的网络接口层？
+>
+> TCP/IP网络模型的四层的数据分别被称作什么？
+
+3.复习黑马java基础，誊写笔记至github
