--- a/Work-Record/dmz/2025年5月.md
+++ b/Work-Record/dmz/2025年5月.md
@@ -88,3 +88,15 @@ cs-risker：
 > TCP/IP网络模型的四层的数据分别被称作什么？
 
 3.复习黑马java基础，誊写笔记至github
+
+# 2025.5.10
+cs-risker：晚上玩了一晚上斗地主，且入坑金铲铲了......
+
+1.做新题：leetcode388；复习leetcode388,206，添加至Carl's_list做题笔记
+
+2.背八股（小林coding）：计算机网络
+> 键入网址到网页显示，期间发生了什么？1.HTTP部分 2.DNS部分 3.协议栈部分
+
+3.把之前的黑马笔记全部誊写在github上完毕
+
+4.手机视频拷贝到硬盘上，腾出24GB空间
