--- a/Work-Record/dmz/2025年5月.md
+++ b/Work-Record/dmz/2025年5月.md
@@ -100,3 +100,13 @@ cs-risker：晚上玩了一晚上斗地主，且入坑金铲铲了......
 3.把之前的黑马笔记全部誊写在github上完毕
 
 4.手机视频拷贝到硬盘上，腾出24GB空间
+
+# 2025.5.11
+cs-risker
+
+1.做新题：leetcode3545,3546,390,393，其中390和393的题解写进本账号力扣题解中
+
+2.背八股（小林coding）：计算机网络
+> 键入网址到网页显示，期间发生了什么？4.TCP部分 5.IP部分
+
+3.黑马java视频看了一点点
