--- a/Work-Record/dmz/2025年5月.md
+++ b/Work-Record/dmz/2025年5月.md
@@ -110,3 +110,17 @@ cs-risker
 > 键入网址到网页显示，期间发生了什么？4.TCP部分 5.IP部分
 
 3.黑马java视频看了一点点
+
+# 2025.5.12
+cs-risker：
+
+1.做新题：leetcode395，记录到Others做题笔记中；复习leetcode142,19，记录到Carl's_list做题笔记中
+
+2.背八股（小林coding）：计算机网络
+> 键入网址到网页显示，期间发生了什么？6.Mac部分 7.网卡部分 8.交换机部分
+
+3.黑马java——简单员工管理系统项目（已做80%）
+
+4.打羽毛球
+
+5.学习金铲铲奥克丝阵容（暂未实战）
