--- a/Work-Record/dmz/2025年5月.md
+++ b/Work-Record/dmz/2025年5月.md
@@ -124,3 +124,19 @@ cs-risker：
 4.打羽毛球
 
 5.学习金铲铲奥克丝阵容（暂未实战）
+
+# 2025.5.13
+cs-risker
+
+1.做新题：leetcode396,397,398；其中396题解记录到csdn博客：https://blog.csdn.net/m0_63222058/article/details/147919707?spm=1001.2014.3001.5502
+
+2.背八股（小林coding）：计算机网络
+> 键入网址到网页显示，期间发生了什么？9.路由器部分
+
+3.黑马java——简单员工管理系统项目做完，代码上传至java_basic-入门级员工管理系统项目
+
+4.黑马java-异常
+
+5.跑步3km
+
+6.学习金铲铲狮子狗阵容，玩7盘，2盘吃鸡，6盘四强
