--- a/Work-Record/dmz/2025年4月.md
+++ b/Work-Record/dmz/2025年4月.md
@@ -92,7 +92,7 @@ cs-risker：
 
 # 2025.4.28
 
-cs-risker：今天回家了，没时间刷力扣......，论文被催进度了，这两天得写完
+cs-risker：今天回家了，没时间刷力扣......，论文这两天得写完
 
 1.写毕设初稿，完成4.2.1，4.2.2,4.2.3
 
