--- a/Work-Record/dmz/2025年5月.md
+++ b/Work-Record/dmz/2025年5月.md
@@ -48,7 +48,8 @@ cs-risker：从今天开始，如果跑步也记录上来
 
 3.修改毕业论文
 
-4.跑步：2km
+**课外**
+1.跑步：2km
 
 # 2025.5.7
 cs-risker：这两天肚子很疼。。。没啥胃口
@@ -64,7 +65,8 @@ cs-risker：这两天肚子很疼。。。没啥胃口
 
 3.修改毕业论文
 
-4.跑步：5km
+**课外**
+1.跑步：5km
 
 # 2025.5.8
 cs-risker：吃胃药，肚子好点了，但还没胃口，没心情做太多事情，烦死了。
@@ -90,7 +92,7 @@ cs-risker：
 3.复习黑马java基础，誊写笔记至github
 
 # 2025.5.10
-cs-risker：晚上玩了一晚上斗地主，且入坑金铲铲了......
+cs-risker：
 
 1.做新题：leetcode388；复习leetcode388,206，添加至Carl's_list做题笔记
 
@@ -99,7 +101,10 @@ cs-risker：晚上玩了一晚上斗地主，且入坑金铲铲了......
 
 3.把之前的黑马笔记全部誊写在github上完毕
 
-4.手机视频拷贝到硬盘上，腾出24GB空间
+**课外**
+1.手机视频拷贝到硬盘上，腾出24GB空间
+
+2.入坑金铲铲
 
 # 2025.5.11
 cs-risker
@@ -121,9 +126,11 @@ cs-risker：
 
 3.黑马java——简单员工管理系统项目（已做80%）
 
-4.打羽毛球
+**课外**
 
-5.学习金铲铲奥克丝阵容（暂未实战）
+1.打羽毛球
+
+2.学习金铲铲奥克丝阵容（暂未实战）
 
 # 2025.5.13
 cs-risker
@@ -137,6 +144,8 @@ cs-risker
 
 4.黑马java-异常
 
-5.跑步3km
+**课外**
 
-6.学习金铲铲狮子狗阵容，玩7盘，2盘吃鸡，6盘四强
+1.跑步3km
+
+2.学习金铲铲狮子狗阵容，玩7盘，2盘吃鸡，6盘四强
