--- a/Work-Record/dmz/2025年5月.md
+++ b/Work-Record/dmz/2025年5月.md
@@ -152,3 +152,13 @@ cs-risker
 1.跑步3km
 
 2.学习金铲铲狮子狗阵容，玩7盘，2盘吃鸡，6盘四强
+
+# 2025.5.15
+cs-risker：最近临近毕业答辩，事情比较多，可能会稍微降低一点任务量
+
+1.做新题leetcode399；复习leetcode242、349，记录至Carl's_list做题笔记中
+
+2.背八股（小林coding）：计算机网络
+> 键入网址到网页显示，期间发生了什么？复习、梳理
+
+3.处理毕业设计相关事项
