--- a/Work-Record/dmz/2025年6月.md
+++ b/Work-Record/dmz/2025年6月.md
@@ -6,3 +6,12 @@
 2.学习《深入理解计算机系统》第一章
 
 3.学习黑马-java泛型，更新《黑马java基础学习笔记》
+
+# 第一周
+## 周一（6.10）
+### 算法题训练
+acwing3302表达式求值
+### 拓展学习
+学习《深入理解计算机系统》P22--P33
+### 其它
+清理电脑部分没用软件以及数据
