--- a/Work-Record/dmz/2025年6月.md
+++ b/Work-Record/dmz/2025年6月.md
@@ -13,5 +13,19 @@
 acwing3302表达式求值
 ### 拓展学习
 学习《深入理解计算机系统》P22--P33
-### 其它
+### 其它事务
 清理电脑部分没用软件以及数据
+
+## 周二（6.11）
+### 算法题训练
+leetcode347前K个高频元素
+
+上述题目记录至Carl's_list的做题笔记中
+### 拓展学习
+学习《深入理解计算机系统》P34--P43
+
+学习csapp-lecture01：course overview
+
+学习zotero；进度：安装、初步尝试文献抓取
+### 其它事务
+整理电脑部分文件夹分布
