--- a/Work-Record/dmz/2025年6月.md
+++ b/Work-Record/dmz/2025年6月.md
@@ -29,3 +29,17 @@ leetcode347前K个高频元素
 学习zotero；进度：安装、初步尝试文献抓取
 ### 其它事务
 整理电脑部分文件夹分布
+
+## 周三（6.12）
+### 算法题训练
+leetcode42 接雨水
+
+上述题目记录至Carl's_list的做题笔记中
+### 拓展学习
+学习《深入理解计算机系统》P44--P53
+
+学习zotero；进度：注册坚果云、配置首选项、了解文献抓取、管理、阅读、批注、笔记的基本操作以及部分插件
+### 科研
+阅读文献《PattPIM: A Practical ReRAM-Based DNN Accelerator by Reusing Weight Pattern Repetitions》并记录笔记`[2020]PattPIM`
+### 其它事务
+备份旧手机上的微信聊天记录至硬盘
