--- a/Work-Record/dmz/2025年6月.md
+++ b/Work-Record/dmz/2025年6月.md
@@ -39,6 +39,8 @@ leetcode42 接雨水
 学习《深入理解计算机系统》P44--P53
 
 学习zotero；进度：注册坚果云、配置首选项、了解文献抓取、管理、阅读、批注、笔记的基本操作以及部分插件
+
+学习黑马java-Collection基础知识，更新《黑马java基础学习笔记》
 ### 科研
 阅读文献《PattPIM: A Practical ReRAM-Based DNN Accelerator by Reusing Weight Pattern Repetitions》并记录笔记`[2020]PattPIM`
 ### 其它事务
