--- a/Work-Record/dmz/2025年6月.md
+++ b/Work-Record/dmz/2025年6月.md
@@ -8,7 +8,7 @@
 3.学习黑马-java泛型，更新《黑马java基础学习笔记》
 
 # 第一周
-## 周一（6.10）
+## 周一（6.9）
 ### 算法题训练
 acwing3302表达式求值
 ### 拓展学习
@@ -16,7 +16,7 @@ acwing3302表达式求值
 ### 其它事务
 清理电脑部分没用软件以及数据
 
-## 周二（6.11）
+## 周二（6.10）
 ### 算法题训练
 leetcode347前K个高频元素
 
@@ -30,7 +30,7 @@ leetcode347前K个高频元素
 ### 其它事务
 整理电脑部分文件夹分布
 
-## 周三（6.12）
+## 周三（6.11）
 ### 算法题训练
 leetcode42 接雨水
 
@@ -45,3 +45,23 @@ leetcode42 接雨水
 阅读文献《PattPIM: A Practical ReRAM-Based DNN Accelerator by Reusing Weight Pattern Repetitions》并记录笔记`[2020]PattPIM`
 ### 其它事务
 备份旧手机上的微信聊天记录至硬盘
+
+## 周四（6.12）
+### 算法题训练
+leetcode94 二叉树的中序遍历（非递归法）
+
+上述题目记录至Carl's_list的做题笔记中
+### 拓展学习
+学习《深入理解计算机系统》P54--P65
+
+学习obsidian；进度：了解软件、安装初识、基本配置、复习markdown语法
+
+学习黑马java-Collection三种遍历方式，更新《黑马java基础学习笔记》
+### 科研
+阅读文献《A Practical Highly Paralleled ReRAM-Based DNN Accelerator by Reusing Weight Pattern Repetitions》并记录笔记`[2022]PattPIM`
+### 其它事务
+删除旧手机无用照片到2025年3月
+
+编写《工作模式动态记录表》
+### 运动
+打羽毛球
