--- a/Work-Record/dmz/2025年6月.md
+++ b/Work-Record/dmz/2025年6月.md
@@ -67,3 +67,22 @@ leetcode94 二叉树的中序遍历（非递归法）
 打羽毛球
 
 口琴--复习《巴赫小步舞曲》
+
+## 周五（6.13）
+### 算法题训练
+leetcode226 翻转二叉树
+
+上述题目记录至Carl's_list的做题笔记中
+### 拓展学习
+学习《深入理解计算机系统》P66--P70
+
+将《深入理解计算机系统》P1--P14的内容整理笔记至obsidian
+
+学习obsidian；进度：学习双链的使用
+
+### 科研
+阅读文献《Sparse ReRAM engine: joint exploration of activation and weight sparsity in compressed neural networks》并记录笔记`[2019]SRE`
+### 其它事务
+删除旧手机无用照片到2025年2月
+### 课外
+口琴--复习《巴赫小步舞曲》
