--- a/Work-Record/dmz/2025年6月.md
+++ b/Work-Record/dmz/2025年6月.md
@@ -1,5 +1,5 @@
 # 2025.6.2
-这几天新冠弱阳了，但症状很轻，今天恢复较好，干点活
+这几天新冠弱阳了，但症状很轻，今天恢复较好，做点事情
 
 1.复习leetcode232记录至Carl's_list的做题笔记中
 
@@ -86,3 +86,13 @@ leetcode226 翻转二叉树
 删除旧手机无用照片到2025年2月
 ### 课外
 口琴--复习《巴赫小步舞曲》
+
+## 周六（6.14）
+### 算法题训练
+leetcode101 对称二叉树
+
+上述题目记录至Carl's_list的做题笔记中
+### 科研
+阅读文献《RePIM: Joint Exploitation of Activation and Weight Repetitions for In-ReRAM DNN Acceleration》并记录笔记`[2021]RePIM`
+### 课外
+下午去黄兴广场
